<resources>
    <string name="app_name">tencent_sample</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Sdk_Sample</string>
    <string name="invite_dialog_tittle">请输入Invite参数</string>
    <string name="story_dialog_tittle">请输入story参数</string>
    <string name="pk_brag_dialog_tittle">请输入挑战炫耀参数</string>
    <string name="ask_gift_dialog_tittle">请输入请求礼物参数</string>
    <string name="grade_dialog_tittle">请输入应用评价参数</string>
    <string name="grade_msg_hint">默认提示文字</string>
    <string name="grade_msg_hint_hint">亲，给个好评吧！</string>
    <string name="source">source:</string>
    <string name="source_hint">Input Source</string>
    <string name="picurl">picurl:</string>
    <string name="picurl_hint">Input Picture Url</string>
    <string name="desc">desc:</string>
    <string name="desc_hint">Input description</string>
    <string name="commit">Commit</string>
    <string name="use_default">Use Default</string>
    <string name="act">act:</string>
    <string name="act1">进入应用</string>
    <string name="act2">领取奖励</string>
    <string name="act3">获取能量:</string>
    <string name="act4">帮助TA</string>
    <string name="options">act:</string>
    <string name="options1">挑战</string>
    <string name="options2">炫耀</string>
    <string name="choice">act:</string>
    <string name="choice1">request</string>
    <string name="choice2">freegift</string>
    <string name="ask_gift_only">act:</string>
    <string name="ask_gift_only1">0</string>
    <string name="ask_gift_only2">1</string>
    <string name="pics">pics:</string>
    <string name="pics_hint">Input pics url</string>
    <string name="title">title:</string>
    <string name="title_hint">Input story title</string>
    <string name="description">description:</string>
    <string name="description_hint">Input description</string>
    <string name="img">img:</string>
    <string name="img_hint">请输入图片URL</string>
    <string name="recimg">recimg:</string>
    <string name="recimg_hint">请输入发送者获得礼物图片URL</string>
    <string name="recimg_desc">recimg desc:</string>
    <string name="recimg_desc_hint">请输入发送者获得礼物图片描述</string>
    <string name="msg">msg:</string>
    <string name="msg_hint">请输入msg</string>
    <string name="summary">summary:</string>
    <string name="targetUrl">targetUrl:</string>
    <string name="targetUrl_hint">Input targetUrl</string>
    <string name="summary_hint">Input summary</string>
    <string name="type">type:</string>
    <string name="type_hint">Input type</string>
    <string name="url">url:</string>
    <string name="url_hint">Input url</string>
    <string name="playurl">playurl:</string>
    <string name="playurl_hint">Input playurl</string>
    <string name="openid_hint">Input openid</string>
    <string name="openid">receiver:</string>
    <string name="add_openid">click to add</string>
    <string name="title_activity_return">ReturnActivity</string>
    <string name="title_activity_auth">授权</string>
    <string name="app_back">返回</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_continue">继续</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_set">设置</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>
    <string name="app_main_login">登陆</string>
    <string name="app_main_api">API</string>
    <string name="app_main_qq_share">QQ分享(无需登录)</string>
    <string name="app_main_qzon_share">QZone(无需登录)</string>
    <string name="app_main_social_api">社交API</string>
    <string name="app_main_is_support_sso_login">是否支持SSO登陆</string>
    <string name="app_main_get_user_info">获取用户资料</string>
    <string name="app_main_add_friend_in_game">游戏内加好友</string>
    <string name="app_main_set_avatar">设置头像</string>
    <string name="app_main_visit_qzone_gallery">访问空间相册</string>
     <string name="app_main_get_weibo_info">获取腾讯微博资料及权限</string>
    <string name="app_main_wap">临时登陆(无需登陆)</string>
    <string name="app_main_weiyun">微云</string>
    <string name="app_main_others">其他</string>
    <string name="app_main_appbar">应用吧</string>
    <string name="app_main_qqgroupp_api">群API</string>
    <string name="applet_secimg_title">填写验证码</string>
    <string name="applet_secimg_change">换一张图片</string>
    <string name="applet_seccode_tip">验证码不能为空</string>
    <string name="applet_seccode_fail_tip">验证码错误，请重新输入</string>
    <string name="verify_password_null_tip">密码不能为空，请输入密码</string>
    <string name="fmt_date">M月d日</string>
    <string name="fmt_longdate">yyyy年M月d日</string>
    <string name="fmt_datetime" formatted="false">M月d日 %skk:mm</string>
    <string name="fmt_patime">kk:mm</string>
    <string name="fmt_longtime" formatted="false">yyyy年M月d日 %skk:mm</string>
    <string name="fmt_in60min" formatted="false">%d分钟前</string>
    <string name="fmt_justnow">1分钟内</string>
    <string name="fmt_dawn">凌晨</string>
    <string name="fmt_morning">早上</string>
    <string name="fmt_noon">中午</string>
    <string name="fmt_afternoon">下午</string>
    <string name="fmt_evening">晚上</string>
    <string name="fmt_pre_yesterday">昨天</string>
    <string name="fmt_iap_err" formatted="false">网络连接不可用，请稍候重试</string>
	<string name="app_share">分享</string>
    <string name="enter">主页面(隐藏)</string>
    <string name="reg">将该app注册到微信</string>
    <string name="goto_send">跳转到发消息界面</string>
    <string name="launch_wx">启动微信</string>
    <string name="check_timeline_supported">检查是否支持发送到朋友圈</string>
    <string name="send_to_wx_title">发送到微信</string>
	<string name="get_from_wx_title">从微信接收</string>
	<string name="show_from_wx_title">显示微信请求的消息</string>
	<string name="errcode_success">发送成功</string>
	<string name="errcode_cancel">发送取消</string>
	<string name="errcode_deny">发送被拒绝</string>
	<string name="errcode_unknown">发送返回</string>
	<string name="send">发送到微信</string>
	<string name="receive">从微信接收</string>
	<string name="is_timeline">是否分享到朋友圈</string>
	<string name="send_text">邀请微信好友(详情页)</string>
	<string name="send_text_default">很好玩的游戏哦。</string>
	<string name="send_img">邀请微信好友(下载)</string>
	<string-array name="send_img_item">
        <item>确认发送</item>
    </string-array>
	<string name="send_img_file_not_exist">文件不存在</string>
	<string name="send_pic">发送照片</string>
	<string name="send_music">发送音乐</string>
	<string-array name="send_music_item">
	    <item>发送音乐url</item>
	    <item>发送低带宽音乐url</item>
	</string-array>
	<string name="send_video">发送视频</string>
	<string-array name="send_video_item">
	    <item>发送视频url</item>
	    <item>发送低带宽视频url</item>
	</string-array>
	<string name="send_webpage">发送网页</string>
	<string-array name="send_webpage_item">
	    <item>发送网页url</item>
	</string-array>
	<string name="send_appdata">发送app消息</string>
	<string-array name="send_appdata_item">
	    <item>发送app文件本地路径</item>
	    <item>发送app二进制数据</item>
	    <item>发送无附件的app</item>
	</string-array>
	<string name="send_emoji">发送表情消息到微信</string>
	<string-array name="send_emoji_item">
	    <item>发送表情本地路径</item>
	    <item>发送表情二进制数据</item>
	</string-array>
	<string-array name="send_emoji_item_format">
	    <item>发送GIF图片</item>
	    <item>发送非GIF图片</item>
	</string-array>
    <string name="share_text_to_weixin">回应文本到微信</string>
    <string name="share_text_default">很好玩的第三方应用哦，分享给大家吧</string>
    <string name="share_url_to_weixin">回应URL到微信</string>
    <string name="share_pic_to_weixin">回应图片到微信</string>
    <string name="share_music_to_weixin">回应音乐到微信</string>
    <string name="share_video_to_weixin">回应视频到微信</string>
    <string name="share_appdata_to_weixin">回应app消息到微信</string>
    <string name="register_as_weixin_app_sender">注册微信事件发送器</string>
    <string name="get_token_from_weixin">获取微信访问Token</string>
    <string name="unregister_from_weixin">从微信反注册</string>
    <string name="show_from_wx_tip">这个界面用于显示微信向第三方app请求显示的信息</string>
    <string name="str_weiyun_main_login">登录QQ帐号</string>
    <string name="str_weiyun_main_logout">注销QQ帐号</string>
    <string name="str_weiyun_main_picture">图片类操作</string>
    <string name="str_weiyun_main_musice">音乐类操作</string>
    <string name="str_weiyun_main_structure">结构化数据操作</string>
    <string name="str_weiyun_main_video">视频类操作</string>
    <string name="str_weiyun_main_cancel">退出程序</string>
    <string name="str_weiyun_operation_record_create">创建记录</string>
    <string name="str_weiyun_operation_record_manage">管理记录</string>
    <string name="str_weiyun_operation_record_check">查询记录</string>
    <string name="str_weiyun_operation_select_upload">上传到微云</string>
    <string name="str_weiyun_operation_manage">管理文件</string>
    <string name="str_weiyun_operation_select_download">下载到本地</string>
    <string name="str_weiyun_operation_select_delete">删除云端文件</string>
    <string name="str_weiyun_operation_select_return">返回</string>
    <string name="str_weiyun_thumb">展示缩略图</string>
    <string name="str_weiyun_download_file">下载文件</string>
    <string name="str_weiyun_delete_file">删除文件</string>
	<string name="str_image_local">本地图片</string>
	<string name="str_image_net">网络图片</string>
	<string name="qqshare_imageUrl_lable">imageUrl</string>
	<string name="qqshare_imageUrl_content">http://img3.douban.com/lpic/s3635685.jpg</string>
    <string name="str_default_share">默认</string>
    <string name="str_audio_share">音乐分享</string>
    <string name="str_image_share">纯图分享</string>
    <string name="str_app_share">应用分享</string>
    <string name="str_image_text_share">图文分享</string>
    <string name="str_share_type">内容类型: </string>
    <string name="special_qzone_action">QQ空间: </string>
    <string name="default_qzone_dialog">Qzone弹窗</string>
    <string name="qzone_item_hide">Qzone隐藏</string>
    <string name="qqshare_title_hint">input title</string>
    <string name="qqshare_title_content">分享音乐,来自下豆瓣FM：The Chordettes</string>
    <string name="qqshare_summary_hint">input summary</string>
    <string name="qqshare_summary_content">豆瓣音乐-Lollipop &lt;Stand By Me> 1990 字数不够？再加点？</string>
    <string name="qqshare_audio_url_lable">audio url</string>
    <string name="qqshare_audioUrl_hint">input music url</string>
    <string name="qqshare_audioUrl_content">http://mr3.douban.com/201307291529/13a106d9b49a9a8446fd3c18f77dc395/view/song/small/p8508.mp3</string>
    <string name="qqshare_targetUrl_lable">targetUrl</string>
    <string name="qqshare_targetUrl_hint">input target url</string>
    <string name="qqshare_targetUrl_content">http://douban.fm/?start=8508g3c27g-3&amp;cid=-3</string>
    <string name="qqshare_imageUrl_hint">input image url</string>
    <string name="qqshare_appName_lable">app name</string>
    <string name="qqshare_appName_hint">input app name</string>
    <string name="qqshare_appName_content">测试应用</string>
    <string name="qzoneshare_title_content">基金（[1]Fund）有广义和狭义之分，从广义上说，基金是指为了某种目的而设立的具有一定数量的资金。例如，信托投资基金、公积金、保险基金、退休基金，各种基金会的基金。人们平常所说的基金主要是指证券投资基金。
证券投资的分析方法主要有如下三种：基本分析法，技术分析法、演化分析法，其中基本分析主要应用于投资标的物的价值判断和选择上，技术分析和演化分析则主要应用于具体投资操作的时间和空间判断上，作为提高证券投资分析有效性和可靠性的重要补充。</string>
    <string name="qzoneshare_summary_content">假设您有一笔钱想投资基金这类证券进行增值，但自己却一无精力二无专业知识，而且你钱也不算多，就想到与其他10个人合伙出资，雇一个投资高手，操作大家合出的资产进行投资增值。但这里面，如果10多个投资人都与投资高手随时交涉，就会乱套，于是就推举其中一个最懂行的牵头办这事。定期从大伙合出的资产中按一定比例提成给他，由他代为付给投资高手劳务费报酬，当然，他自己牵头出力张罗大大小小的事，包括挨家跑腿，有关风险的事向高手随时提醒着点，定期向大伙公布投资盈亏情况等等，不可白忙，提成中的钱也有他的劳务费。上面这些事就叫作合伙投资。[2]
将这种合伙投资的模式扩大100倍、1000倍，就是基金。[3]
这种民间私下合伙投资的活动如果在出资人间建立了完备的契约合同，就是私募基金（在我国还未得到国家金融行业监管有关法规的认可）。
如果这种合伙投资的活动经过国家证券行业管理部门（中国证券监督管理委员会）的审批，允许这项活动的牵头操作人向社会公开募集吸收投资者加入合伙出资，这就是发行公募基金，也就是大家常见的基金。
基金不仅可以投资证券，也可以投资企业和项目[4]。基金管理公司通过发行基金单位，集中投资者的资金，由基金托管人（即具有资格的银行）托管，由基金管理人管理和运用资金，从事股票、债券等金融工具投资，然后共担投资风险、分享收益。</string>
	<string name="str_album_list">相册列表</string>
	<string name="str_photo_list">照片列表</string>
</resources>